# 3DViewerCpp

./: CMakeLists.txt
src/: 3DViewer_v1.pro  CMakeLists.txt  Doxyfile  Makefile  glview.cpp  glview.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h
src/QClass/: view.ui
src/SettingsClass/: options_t.h
src/backend/moving/: normalization_object_t.c
src/controller/: controller.cc  controller.h  options_t.h
src/model/: VertexesAndFacets.h  a.out  affine_normalize.cc  affine_object.cc  connect.cc  connect.h  container_object.cc  debug.cc  model.cc  model.h  moving.cc  moving.h  normalization.cc  object_model.h  parsing_object.cc  part_object.h  singleton.cc
src/tests/: tests.cc
src/view/: options.cc  options.h  options.ui  view.ui
src/view/OpenGLWidget/: gl_override.cc  gl_override.h
